--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,7 +5,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".Activities.SignUpActivity">
+tools:context=".Activities.EditProfileActivity">
 
 <RelativeLayout
     android:layout_width="match_parent"
@@ -16,28 +16,61 @@ tools:context=".Activities.SignUpActivity">
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:src="@drawable/ic_up_background"
+        android:layout_alignParentTop="true"
         />
 
+    <LinearLayout
+        android:id="@+id/ll_edit_container"
+
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/iv_icon"
+        android:layout_marginTop="48dp"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        >
     <TextView
-        android:id="@+id/tv_username"
+        android:id="@+id/tv_photo_details"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:text="Upload a pic, it will be your profile photo"
+        android:textSize="14sp"
+        android:textColor="@color/colorText"
+        android:gravity="center_horizontal"
+        android:layout_weight="1"
+        />
+
+    <ImageView
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_weight="1"
+        android:src="@drawable/ic_profile_photoxxxhdpi"
+        />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_phone"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Username"
-        android:layout_below="@+id/iv_icon"
-        android:layout_marginTop="16dp"
+        android:text="Phone number"
+        android:layout_below="@+id/ll_edit_container"
+        android:layout_marginTop="48dp"
         android:textSize="18sp"
         android:textColor="@color/colorText"
         />
 
     <EditText
-        android:id="@+id/et_username"
+        android:id="@+id/et_phone"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_username"
+        android:layout_below="@+id/tv_phone"
         android:singleLine="true"
         android:layout_marginTop="16dp"
         android:inputType="textPersonName"
@@ -48,107 +81,48 @@ tools:context=".Activities.SignUpActivity">
         />
 
     <TextView
-        android:id="@+id/tv_password"
+        android:id="@+id/tv_car"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Password"
-        android:layout_below="@+id/et_username"
+        android:text="Car number"
+        android:layout_below="@+id/et_phone"
         android:layout_marginTop="16dp"
         android:textSize="18sp"
         android:textColor="@color/colorText"
         />
 
     <EditText
-        android:id="@+id/et_password"
+        android:id="@+id/et_car"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_password"
+        android:layout_below="@+id/tv_car"
         android:singleLine="true"
         android:layout_marginTop="16dp"
         android:textSize="22sp"
-        android:inputType="textPassword"
-        android:padding="6dp"
-        android:textColor="@color/colorText"
-        android:background="@color/colorGray"
-        />
-
-    <TextView
-        android:id="@+id/tv_confirm_password"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Confirm Password"
-        android:layout_below="@+id/et_password"
-        android:layout_marginTop="16dp"
-        android:textSize="18sp"
-        android:textColor="@color/colorText"
-        />
-
-    <EditText
-        android:id="@+id/et_confirm_password"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_confirm_password"
-        android:singleLine="true"
-        android:layout_marginTop="16dp"
-        android:textSize="22sp"
-        android:inputType="textPassword"
-        android:padding="6dp"
-        android:textColor="@color/colorText"
-        android:background="@color/colorGray"
-
-        />
-
-    <TextView
-        android:id="@+id/tv_matricol"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Matricol number"
-        android:layout_below="@+id/et_confirm_password"
-        android:layout_marginTop="16dp"
-        android:textSize="18sp"
-        android:textColor="@color/colorText"
-        />
-
-    <EditText
-        android:id="@+id/et_matricol"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_matricol"
-        android:singleLine="true"
-        android:layout_marginTop="16dp"
-        android:textSize="22sp"
-        android:inputType="textPassword"
         android:padding="6dp"
         android:textColor="@color/colorText"
         android:background="@color/colorGray"
         />
 
     <Button
-        android:id="@+id/btn_signin"
+        android:id="@+id/btn_save"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/et_matricol"
+        android:layout_below="@+id/et_car"
         android:layout_marginTop="32dp"
         android:textSize="24sp"
-        android:text="Create account"
+        android:text="Save"
         android:padding="6dp"
         android:textAllCaps="false"
         android:textColor="@color/colorText"
         android:background="@color/colorYellow"
+        android:onClick="OnSave"
         android:layout_marginBottom="20dp"
         />
 
