--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,7 +15,7 @@ tools:context=".Activities.ProfileActivity">
         android:id="@+id/iv_icon"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:src="@drawable/ic_upldpi"
+        android:src="@drawable/ic_up_background"
         />
 
     <LinearLayout
@@ -216,6 +216,7 @@ tools:context=".Activities.ProfileActivity">
             android:textColor="@color/colorText"
             android:background="@color/colorYellow"
             android:layout_marginBottom="20dp"
+            android:onClick="OnEditProfile"
             />
 
         <Button
@@ -234,6 +235,7 @@ tools:context=".Activities.ProfileActivity">
             android:textColor="@color/colorText"
             android:background="@color/colorYellow"
             android:layout_marginBottom="20dp"
+            android:onClick="OnSignOut"
             />
 
 
