--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -46,7 +46,7 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_weight="1"
-        android:src="@drawable/ic_profile_photoxxxhdpi"
+        android:src="@drawable/ic_home"
         />
 
     </LinearLayout>
