--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -85,8 +85,9 @@
                     android:alpha="0.7" />
 
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="150dp"
                     android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
                     android:alpha="0.5"
                     android:background="#e6e9ef"/>
 
