--- a/app/src/main/res/layout/activity_year_group.xml
+++ b/app/src/main/res/layout/activity_year_group.xml
@@ -19,11 +19,28 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <RelativeLayout
+                android:id="@+id/tv_search"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:background="@color/colorToolbar">
+
+            <ImageView
+                android:id="@+id/iv_toolbar_back"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/ic_search"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
+            </RelativeLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_listed_yeargroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp"
+                android:layout_below="@+id/tv_search"/>
 
         </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
