--- a/app/src/main/res/layout/activity_one_post.xml
+++ b/app/src/main/res/layout/activity_one_post.xml
@@ -20,20 +20,48 @@
                 android:id="@+id/tv_title_subject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginStart="20dp"
-                android:text="Subiect"
+                android:layout_marginEnd="20dp"
+                android:text="Subject"
                 android:textColor="@color/colorText"
                 android:textSize="24sp"
                 android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/tv_date_subject"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:layout_alignParentEnd="true"
+                android:textStyle="bold"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="20dp"
+                android:text="26.10.2019"
+                android:textColor="@color/colorText"
+                />
+
+            <TextView
+                android:id="@+id/tv_hour_subject"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:layout_alignParentEnd="true"
+                android:textStyle="bold"
+                android:layout_marginEnd="20dp"
+                android:layout_below="@+id/tv_date_subject"
+                android:text="22:11"
+                android:textColor="@color/colorText"
+                />
+
             <TextView
                 android:id="@+id/tv_text_subject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_title_subject"
                 android:textSize="14sp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:textColor="@color/colorText"
                 android:text="orice vreau eu bla bla"
                 />
@@ -43,22 +71,67 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Comments"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginStart="20dp"
-                android:textSize="18sp"
+                android:layout_marginEnd="24dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@color/colorText"
                 android:layout_below="@+id/tv_text_subject"
                 />
 
             <TextView
-                android:id="@+id/tv_text_comment"
+                android:id="@+id/tv_text_comment_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_name"
-                android:textSize="14sp"
-                android:layout_marginTop="20dp"
+                android:textSize="12sp"
+                android:layout_marginTop="30dp"
                 android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:textStyle="italic"
+                android:textColor="@color/colorText"
+                android:text="NUME Prenume"
+                />
+
+
+
+            <TextView
+                android:id="@+id/tv_text_comment_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_text_comment_name"
+                android:textSize="14sp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:textColor="@color/colorText"
+                android:text="trebuie sa inplementez o lista: numele persoanei si ce anume a zis"
+                />
+
+            <TextView
+                android:id="@+id/tv_text_comment_name2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_text_comment_text"
+                android:textSize="12sp"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:textStyle="italic"
+                android:textColor="@color/colorText"
+                android:text="NUME Prenume"
+                />
+
+            <TextView
+                android:id="@+id/tv_text_comment_text2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_text_comment_name2"
+                android:textSize="14sp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:textColor="@color/colorText"
                 android:text="trebuie sa inplementez o lista: numele persoanei si ce anume a zis"
                 />
