--- a/app/src/main/res/layout/row_yeargroup_posts.xml
+++ b/app/src/main/res/layout/row_yeargroup_posts.xml
@@ -76,6 +76,8 @@
             android:layout_marginEnd="8dp"
             android:textColor="@color/colorText"
             android:layout_below="@id/tv_text_subject"
+            android:text="Author name"
+            android:layout_marginBottom="10dp"
             />
 
     </RelativeLayout>
