--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,10 +6,31 @@
     tools:context=".Fragments.SettingsFragment">
 
     <TextView
+        android:id="@+id/tv_setari"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Setariiii"
         android:textAlignment="center"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="30dp"/>
+
+    <Button
+        android:id="@+id/btn_send"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_setari"
+        android:layout_marginBottom="32dp"
+        android:layout_marginTop="32dp"
+        android:textSize="24sp"
+        android:text="Tritime mail unui profesor"
+        android:padding="6dp"
+        android:textAllCaps="false"
+        android:textColor="@color/colorText"
+        android:background="@color/colorYellow"
+        android:onClick="OnSendMail"
+        />
+
 
 </FrameLayout>
