--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -21,7 +21,6 @@ tools:context=".Activities.EditProfileActivity">
 
     <LinearLayout
         android:id="@+id/ll_edit_container"
-
         android:layout_marginEnd="20dp"
         android:layout_marginStart="200dp"
         android:layout_width="wrap_content"
@@ -35,7 +34,7 @@ tools:context=".Activities.EditProfileActivity">
         android:id="@+id/tv_photo_details"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:text="Upload a pic, it will be your profile photo"
+        android:text="Încarcă o fotografie, aceasta va fi poza ta de profil"
         android:textSize="14sp"
         android:textColor="@color/colorText"
         android:gravity="center_horizontal"
@@ -57,7 +56,7 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_marginEnd="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Phone number"
+        android:text="Număr de telefon"
         android:layout_below="@+id/ll_edit_container"
         android:layout_marginTop="48dp"
         android:textSize="18sp"
@@ -72,12 +71,12 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_phone"
         android:singleLine="true"
-        android:layout_marginTop="16dp"
-        android:inputType="textPersonName"
         android:textSize="22sp"
+        android:inputType="textPersonName"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:background="@color/colorGray"
+        android:backgroundTint="@color/colorGray"
+        android:layout_marginBottom="10dp"
         />
 
     <TextView
@@ -86,7 +85,7 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_marginEnd="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Car number"
+        android:text="Număr înmatriculare"
         android:layout_below="@+id/et_phone"
         android:layout_marginTop="16dp"
         android:textSize="18sp"
@@ -101,11 +100,12 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_car"
         android:singleLine="true"
-        android:layout_marginTop="16dp"
         android:textSize="22sp"
+        android:inputType="textPersonName"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:background="@color/colorGray"
+        android:backgroundTint="@color/colorGray"
+        android:layout_marginBottom="10dp"
         />
 
     <Button
@@ -116,12 +116,12 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_height="wrap_content"
         android:layout_below="@+id/et_car"
         android:layout_marginTop="32dp"
-        android:textSize="24sp"
-        android:text="Save"
+        android:textSize="20sp"
+        android:text="Salvează"
         android:padding="6dp"
         android:textAllCaps="false"
         android:textColor="@color/colorText"
-        android:background="@color/colorYellow"
+        android:background="@drawable/border"
         android:onClick="OnSave"
         android:layout_marginBottom="20dp"
         />
